@@ -1,3 +1,8 @@
+2002-08-01  Christophe Fergeau  <teuf@users.sourceforge.net>
+
+ 	* capplets/theme-switcher/theme-switcher.c: correctly deal with bzip2
+ 	  compressed theme files
+
 2002-08-07  Jody Goldberg <jody@gnome.org>
 	Patch from JRB for 88443
 
